# gaudi_effects

./: AUTHORS  ChangeLog  Makefile  README  configure.ac
src/: Makefile.am  blur-example.py  gstblend.c  gstblend.h  gstburn.c  gstburn.h  gstchromium.c  gstchromium.h  gstdilate.c  gstdilate.h  gstdodge.c  gstdodge.h  gstexclusion.c  gstexclusion.h  gstsolarize.c  gstsolarize.h
